Spawnerv3, if player heath hits 0 goto death scene

--- a/unityfile_DEMO/Game3/Game3.csproj
+++ b/unityfile_DEMO/Game3/Game3.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Assets\Scripts\BController.cs" />
     <Compile Include="Assets\Scripts\BGController.cs" />
     <Compile Include="Assets\Scripts\BackgroundReposition.cs" />
+    <Compile Include="Assets\Scripts\EnemyObjectCollDetect.cs" />
     <Compile Include="Assets\Scripts\PLAY.cs" />
     <Compile Include="Assets\Scripts\PlayerControler.cs" />
     <Compile Include="Assets\Scripts\Quit.cs" />
